--- a/app/design/frontend/base/default/template/swarming/riselms/checkout/success.phtml
+++ b/app/design/frontend/base/default/template/swarming/riselms/checkout/success.phtml
@@ -1,39 +1,10 @@
 <?php
-/**
- * Magento
- *
- * NOTICE OF LICENSE
- *
- * This source file is subject to the Academic Free License (AFL 3.0)
- * that is bundled with this package in the file LICENSE_AFL.txt.
- * It is also available through the world-wide-web at this URL:
- * http://opensource.org/licenses/afl-3.0.php
- * If you did not receive a copy of the license and are unable to
- * obtain it through the world-wide-web, please send an email
- * to license@magento.com so we can send you a copy immediately.
- *
- * DISCLAIMER
- *
- * Do not edit or add to this file if you wish to upgrade Magento to newer
- * versions in the future. If you wish to customize Magento for your
- * needs please refer to http://www.magento.com for more information.
- *
- * @category    design
- * @package     base_default
- * @copyright   Copyright (c) 2006-2016 X.commerce, Inc. and affiliates (http://www.magento.com)
- * @license     http://opensource.org/licenses/afl-3.0.php  Academic Free License (AFL 3.0)
- */
 ?>
 <?php
 	if ($this->getOrderHasRiseProduct()) {
-		// Check for static block
-		$blockId = 'riselms_success_block';
-		$riselmsSuccessBlock = $this->getLayout()->createBlock('cms/block')->setBlockId($blockId);
+		$riselmsSuccessBlock = $this->getLayout()->createBlock('cms/block')->setBlockId('riselms_success_block');
 
-		if (Mage::getModel('cms/block')->load($blockId)->getIsActive() == 1 && $riselmsSuccessBlock->toHtml() !== '') {
-			echo $riselmsSuccessBlock->toHtml();
-		} else {
-			echo Mage::helper('swarming_riselms/data')->__('Click here to view <a href="%s">My Courses</a>', $this->getRiseProductsUrl());
-		}
+		echo $riselmsSuccessBlock->toHtml() ?:
+            Mage::helper('swarming_riselms')->__('Click here to view <a href="%s">My Courses</a>', $this->getRiseProductsUrl());
 	}
 ?>
