Rename all entries of Swarming to Sarus

--- a/app/design/frontend/base/default/template/sarus/sarus/checkout/success.phtml
+++ b/app/design/frontend/base/default/template/sarus/sarus/checkout/success.phtml
@@ -5,6 +5,6 @@
 		$sarusSuccessBlock = $this->getLayout()->createBlock('cms/block')->setBlockId('sarus_success_block');
 
 		echo $sarusSuccessBlock->toHtml() ?:
-            Mage::helper('swarming_sarus')->__('Click here to view <a href="%s">My Courses</a>', $this->getSarusProductsUrl());
+            Mage::helper('sarus_sarus')->__('Click here to view <a href="%s">My Courses</a>', $this->getSarusProductsUrl());
 	}
 ?>
