--- a/app/design/frontend/base/default/template/sarus/sarus/courses.phtml
+++ b/app/design/frontend/base/default/template/sarus/sarus/courses.phtml
@@ -4,39 +4,36 @@
 
 $customerCourses = $this->getCustomerCourses();
 ?>
-<!-- TODO Update css classes and styling -->
-<div class="my-account">
-    <div class="page-title">
-        <h1><?php echo $this->__('My Courses') ?></h1>
-    </div>
-    <div ng-app="BrainMD">
-        <?php if (!empty($customerCourses)): ?>
-            <ul class="row">
-                <?php foreach ($customerCourses as $course): ?>
-                    <?php if (empty($course['course_uuid'])): continue; endif;?>
+<ul>
+    <?php if (empty($customerCourses)): ?>
+        <li><?php echo $this->__('No courses available.') ?></li>
+    <?php else: ?>
+        <?php foreach ($customerCourses as $courseData): ?>
+            <li>
+                <h4><?php echo $this->escapeHtml($courseData['title']) ?></h4>
 
-                    <li class="item col-sm-6 col-lg-4" ng-repeat="item in ctrl.purchases">
-                        <div class="item-inner">
-                            <h3><?php echo $this->escapeHtml($course['title']) ?></h3>
-                            <img class="img-responsive" src="<?php echo $this->getCourseImageUrl($course); ?>" />
-                            <?php if (!empty($course['url'])): ?>
-                                <a class="btn" target="_blank" href="<?php echo $course['url'] ?>"><?php echo $this->__('Go to Course!') ?></a>
-                            <?php endif; ?>
-                        </div>
-                    </li>
-                <?php endforeach; ?>
-            </ul>
-        <?php else: ?>
-            <p><?php echo $this->__('No courses available.') ?></p>
-        <?php endif; ?>
-    </div>
-</div>
+                <img src="<?php echo $this->getCourseImageUrl($courseData) ?>" />
+
+                <?php if (!empty($courseData['description'])): ?>
+                    <p><?php echo $courseData['description'] ?></p>
+                <?php endif; ?>
+
+                <?php if (!empty($courseData['url'])): ?>
+                    <div>
+                        <a class="btn" target="_blank" href="<?php echo $courseData['url'] ?>"><?php echo $this->__('Go to Course!') ?></a>
+                    </div>
+                <?php endif; ?>
+            </li>
+        <?php endforeach; ?>
+    <?php endif; ?>
+</ul>
 <div class="buttons-set">
     <p class="back-link">
-        <a href="<?php echo Mage::getUrl('customer/account/'); ?>"><small>&#171;</small> <?php echo $this->__('Back') ?></a>
+        <a href="<?php echo $this->getUrl('customer/account/'); ?>"><small>&#171;</small> <?php echo $this->__('Back') ?></a>
     </p>
 </div>
 
+<!-- TODO Update css classes and styling -->
 <style>
     .my-account .item {
         text-align: center;
